2012-10-11  Adam Barth  <abarth@webkit.org>

        Add baselines for the rest of the platforms after
        http://trac.webkit.org/changeset/131111

        * platform/chromium-linux/fast/sub-pixel/sub-pixel-iframe-copy-on-scroll-expected.txt: Removed.
        * platform/chromium-mac-snowleopard/fast/sub-pixel/sub-pixel-iframe-copy-on-scroll-expected.png: Added.
        * platform/chromium-mac/fast/sub-pixel/sub-pixel-iframe-copy-on-scroll-expected.png: Added.
        * platform/chromium-mac/fast/sub-pixel/sub-pixel-iframe-copy-on-scroll-expected.txt: Added.
        * platform/chromium-win/fast/sub-pixel/sub-pixel-iframe-copy-on-scroll-expected.png: Added.
        * platform/chromium-win/fast/sub-pixel/sub-pixel-iframe-copy-on-scroll-expected.txt: Added.

2012-10-11  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r131107.
        http://trac.webkit.org/changeset/131107
        https://bugs.webkit.org/show_bug.cgi?id=99126

        Causes an ASSERT (Requested by abarth|gardening on #webkit).

        * accessibility/secure-textfield-title-ui.html:
        * accessibility/title-ui-element-correctness-expected.txt: Removed.
        * accessibility/title-ui-element-correctness.html: Removed.
        * perf/accessibility-title-ui-element-expected.txt: Removed.
        * perf/accessibility-title-ui-element.html: Removed.
        * platform/chromium/TestExpectations:

2012-10-11  Jeffrey Pfau  <jpfau@apple.com>

        [Mac] Temporarily mark fast/canvas/webgl/arraybuffer-transfer-of-control.html as failing
        https://bugs.webkit.org/show_bug.cgi?id=99096

        * platform/mac/TestExpectations:

2012-10-11  Levi Weintraub  <leviw@chromium.org>

        [Sub pixel layout] Fast-path iframe scrolling can picks up an extra pixel
        https://bugs.webkit.org/show_bug.cgi?id=98571

        Reviewed by Emil A Eklund.

        Tests scrolling of sub-pixel layers on sub-pixel platforms (Chromium).
