@@ -1,132 +1,0 @@
-<!doctype html>
-<html>
-<head>
-    <title>Tests that custom filter composite operators compute color values correctly.</title>
-    <!--
-        This test mimics the Porter Duff Compositing Operators example image in the Compositing and Blending spec:
-        https://dvcs.w3.org/hg/FXTF/rawfile/tip/compositing/index.html#porterduffcompositingoperators_srcatop
-    -->
-    <script>
-        if (window.testRunner) {
-            window.testRunner.overridePreference("WebKitCSSCustomFilterEnabled", "1");
-            window.testRunner.overridePreference("WebKitWebGLEnabled", "1");
-            window.testRunner.dumpAsText(true);
-        }
-    </script>
-    <style>
-    /* Draws a black border around the shaded destination div. */
-    #border-container {
-        width: 45px;
-        height: 45px;
-        border: 1px solid black;
-    }
-    /* The shaded div. */
-    .destination {
-        width: 100%;
-        height: 100%;
-    }
-    /* Draws a yellow square in the upper left corner of the destination div. */
-    /* The rest of the destination div is transparent. */
-    #destination-opaque-child {
-        width: 67%;
-        height: 67%;
-        background-color: yellow;
-    }
-    /* Composite operators */
-    .clear {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal clear));
-    }
-    .copy {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal copy));
-    }
-    .source-over {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal source-over));
-    }
-    .destination-over {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal destination-over));
-    }
-    .source-in {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal source-in));
-    }
-    .destination-in {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal destination-in));
-    }
-    .source-out {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal source-out));
-    }
-    .destination-out {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal destination-out));
-    }
-    .source-atop {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal source-atop));
-    }
-    .destination-atop {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal destination-atop));
-    }
-    .xor {
-        -webkit-filter: custom(url('../resources/pass-tex-coord.vs') mix(url('../resources/composite.fs') normal xor));
-    }
-    </style>
-</head>
-<body>
-    <div id="border-container">
-        <div class="destination clear">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <div id="border-container">
-        <div class="destination copy">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <div id="border-container">
-        <div class="destination source-over">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <div id="border-container">
-        <div class="destination destination-over">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <div id="border-container">
-        <div class="destination source-in">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <div id="border-container">
-        <div class="destination destination-in">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <div id="border-container">
-        <div class="destination source-out">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <div id="border-container">
-        <div class="destination destination-out">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <div id="border-container">
-        <div class="destination source-atop">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <div id="border-container">
-        <div class="destination destination-atop">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <div id="border-container">
-        <div class="destination xor">
-            <div id="destination-opaque-child"></div>
-        </div>
-    </div>
-    <!--
-        If you add more composite operators to this page, be careful not to exceed 600px in
-        height, since DumpRenderTree compares 800x600 snapshots of this page.
-    -->
-</body>
-</html>
